# vela

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  VISION.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/schemas/com.vela.app.data.db.VelaDatabase/: 1.json  10.json  11.json  12.json  13.json  14.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
app/src/androidTest/kotlin/com/vela/app/: ConversationFlowTest.kt  ConversationScreenTest.kt  MediaPipeSmokeTest.kt  ModelLoadingScreenTest.kt  Slow.kt  VoiceButtonTest.kt
app/src/androidTest/kotlin/com/vela/app/ai/: AmplifierBridgeAgentsTest.kt
app/src/androidTest/kotlin/com/vela/app/util/: AccessibilitySnapshot.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/blocks/: vela-action-list.js  vela-checklist.js  vela-heatmap-calendar.js  vela-kanban.js  vela-metadata-card.js  vela-progress-ring.js  vela-status-badge.js  vela-step-through.js  vela-timeline.js  vela-timer.js
app/src/main/assets/lib/: vela-runtime.js
app/src/main/assets/lifeos/: SYSTEM.md
app/src/main/assets/skills/book-reading-card/: SKILL.md  skill.yaml  template.html
app/src/main/assets/skills/daily-journal/: SKILL.md  skill.yaml  template.html
app/src/main/assets/skills/meeting-action-tracker/: SKILL.md  skill.yaml  template.html
app/src/main/assets/skills/recipe-cookalong/: SKILL.md  skill.yaml  template.html
app/src/main/assets/skills/security-alert/: SKILL.md  skill.yaml  template.html
app/src/main/assets/skills/task-kanban/: SKILL.md  skill.yaml  template.html
app/src/main/cpp/: llama_bridge.cpp
app/src/main/kotlin/com/vela/app/: MainActivity.kt  VelaApplication.kt
app/src/main/kotlin/com/vela/app/a2ui/: VelaUiModel.kt  VelaUiParser.kt  VelaUiSurface.kt
app/src/main/kotlin/com/vela/app/ai/: AgentOrchestrator.kt  AgentRef.kt  AmplifierBridge.kt  AmplifierSession.kt  ArchetypeDetector.kt  ChatMessage.kt  ContentExtractor.kt  FakeGemmaEngine.kt  GemmaEngine.kt  GemmaToolCallParser.kt  InferenceProvider.kt  IntentExtractor.kt  LifecycleAwareEngine.kt  MediaPipeGemmaEngine.kt  MlKitGemma4Engine.kt  MlKitInferenceProvider.kt  MlKitModelPort.kt  ModelManager.kt  PromptBuilder.kt  ProviderRegistry.kt  ReadinessState.kt  RendererAssembler.kt  RendererGenerator.kt  SkillLibrary.kt  VelaPromptBuilder.kt
app/src/main/kotlin/com/vela/app/audio/: TtsEngine.kt
app/src/main/kotlin/com/vela/app/di/: AppModule.kt  EnabledVaultPaths.kt  VelaEventBus.kt
app/src/main/kotlin/com/vela/app/engine/: ContentBlock.kt  InferenceEngine.kt  InferenceSession.kt
app/src/main/kotlin/com/vela/app/events/: EventBus.kt
app/src/main/kotlin/com/vela/app/github/: GitHubIdentityManager.kt
app/src/main/kotlin/com/vela/app/harness/: SessionHarness.kt
app/src/main/kotlin/com/vela/app/hooks/: Hook.kt  HookRegistry.kt  PersonalizationHook.kt  StatusContextHook.kt  TodoReminderHook.kt  VaultConfigHook.kt  VaultEmbeddingHook.kt  VaultIndexHook.kt  VaultSyncHook.kt
app/src/main/kotlin/com/vela/app/recording/: RecordingRepository.kt  RecordingService.kt  RecordingViewModel.kt  TranscriptionService.kt
app/src/main/kotlin/com/vela/app/server/: VelaMiniAppCleaner.kt  VelaMiniAppRoutes.kt  VelaMiniAppServer.kt
app/src/main/kotlin/com/vela/app/share/: ShareProcessingScreen.kt  ShareReceiveActivity.kt  ShareViewModel.kt
app/src/main/kotlin/com/vela/app/skills/: SkillLoadResult.kt  SkillMeta.kt  SkillsEngine.kt
app/src/main/kotlin/com/vela/app/ssh/: SshKeyManager.kt  SshNode.kt  SshNodeRegistry.kt
app/src/main/kotlin/com/vela/app/ui/: NavigationScaffold.kt  NavigationViewModel.kt  VelaDrawerContent.kt
app/src/main/kotlin/com/vela/app/vault/: EmbeddingEngine.kt  LocalEmbedder.kt  SharedPrefsVaultSettings.kt  VaultGitSync.kt  VaultManager.kt  VaultRegistry.kt  VaultSettings.kt
app/src/main/kotlin/com/vela/app/voice/: AndroidSpeechTranscriber.kt  SpeechTranscriber.kt  VoiceCapture.kt
app/src/main/kotlin/com/vela/app/workers/: ProfileWorker.kt  ProfileWorkerScheduler.kt
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/raw/: msal_config.json
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml  network_security_config.xml
app/src/main/rust/amplifier-android/: Cargo.toml
app/src/main/rust/amplifier-android/src/: agents.rs  context.rs  jni_hooks.rs  jni_tools.rs  lib.rs  orchestrator.rs  provider.rs
app/src/test/kotlin/com/vela/app/: VelaApplicationServerTest.kt
app/src/test/kotlin/com/vela/app/ai/: AgentRefTest.kt  FakeGemmaEngineTest.kt  IntentExtractorTest.kt  MediaPipeGemmaEngineTest.kt  MlKitGemma4EngineTest.kt  ModelManagerTest.kt  RendererAssemblerTest.kt  RendererGeneratorTest.kt  RustNativeToolsFilterTest.kt  SkillLibraryTest.kt
app/src/test/kotlin/com/vela/app/assets/: LifeosAssetTest.kt
app/src/test/kotlin/com/vela/app/audio/: TtsEngineTest.kt
crates/amplifier-module-hooks-routing/: Cargo.toml
crates/amplifier-module-hooks-routing/routing/: anthropic.yaml  balanced.yaml  copilot.yaml  economy.yaml  gemini.yaml  openai.yaml  quality.yaml
crates/amplifier-module-hooks-routing/src/: composer.rs  lib.rs  matrix.rs  resolver.rs
crates/amplifier-module-hooks-routing/tests/: integration_test.rs
crates/amplifier-module-orchestrator-loop-streaming/: Cargo.toml
crates/amplifier-module-orchestrator-loop-streaming/src/: lib.rs
crates/amplifier-module-orchestrator-loop-streaming/tests/: context_threading_e2e.rs
crates/amplifier-module-session-store/: Cargo.toml
crates/amplifier-module-session-store/src/: file.rs  format.rs  lib.rs
crates/amplifier-module-session-store/tests/: integration_test.rs
crates/amplifier-module-tool-delegate/: Cargo.toml
crates/amplifier-module-tool-delegate/src/: context.rs  lib.rs  resolver.rs
crates/amplifier-module-tool-delegate/tests/: integration_test.rs  property_tests.rs
gradle/: libs.versions.toml
sandbox/amplifier-android-sandbox/: Cargo.toml
sandbox/amplifier-android-sandbox/src/: main.rs
(+175 files in other folders)
