[package]
    name = "amplifier-module-hooks-routing"
    version = "0.1.0"
    edition = "2021"
    include = ["src/**", "routing/**", "Cargo.toml", "README.md"]

    [dependencies]
    amplifier-core = { workspace = true }
    amplifier-module-agent-runtime = { workspace = true }
    amplifier-module-orchestrator-loop-streaming = { workspace = true }
    async-trait = { workspace = true }
    serde = { workspace = true }
    serde_json = { workspace = true }
    serde_yaml = { workspace = true }
    anyhow = { workspace = true }
    tokio = { workspace = true }
    globset = { workspace = true }
    regex = { workspace = true }

    [dev-dependencies]
    tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
    tempfile = "3"
    