[package]
name = "amplifier-module-session-store"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
dirs = "5"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { version = "1", features = ["rt", "macros", "sync"] }
