[package]
name = "amplifier-module-session-store"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
dirs = "5"
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
chrono = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
amplifier-core = { workspace = true }
amplifier-module-orchestrator-loop-streaming = { workspace = true }
amplifier-module-tool-task = { workspace = true }
