[package]
name = "amplifier-module-tool-delegate"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1"
anyhow = "1"
amplifier-module-agent-runtime = { path = "../amplifier-module-agent-runtime" }
amplifier-module-tool-task = { path = "../amplifier-module-tool-task" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
async-trait = "0.1"
proptest = "1"
